Fix achievement vertical alignment

--- a/src/modules/dashboard/components/LevelDashboard/LevelAttributes.css
+++ b/src/modules/dashboard/components/LevelDashboard/LevelAttributes.css
@@ -17,6 +17,10 @@
   margin-left: 12px;
 }
 
+.rewardItemAchievement {
+  max-height: 34px;
+}
+
 .requirementsContainer {
   display: flex;
   justify-content: space-between;
